translate files to Pусский

--- a/ru/cleo-3/code-library.html
+++ b/ru/cleo-3/code-library.html
@@ -12,18 +12,18 @@
 :::right
 [h2][CLEO 3]
 :::light gray p-2
-What is CLEO 3? -------
+Что такое CLEO 3? -------
 :::
 :::
 
-CLEO 3 is the next step in the CLEO project development that extends coding possibilities in San Andreas. After installing CLEO 3, you get everything that CLEO 2 can, plus some new features.
+CLEO 3 – это следующий шаг в развитии проекта CLEO, расширяющего границы возможностей скриптинга San Andreas. После установки библиотеки CLEO вы получаете все то, что может библиотека CLEO 2, а также некоторые нововведения третьей версии.
 
-1. [New opcodes](opcodes.md).<br>CLEO 3 has 40 useful opcodes in store, such as file management, game memory handling, ability to call exe functions and much more. The third version [adds such opcodes](opcodes.md) as a call of a SCM function, creating a thread or starting a mission from an external file and more.
-2. [Plugins](#plugins).<br>Read more about them below.
-3. [Custom scripts](scripts.md).<br>CLEO 3 allows adding the custom scripts to the game written in Sanny Builder without need for starting of a new game. All you need is to write a script, place it in the CLEO folder and run the game (new or saved). 
+1. [Новые опкоды](opcodes.md).<br>CLEO 3 имеет в наличии 40 полезных опкодов, среди которых есть опкоды чтения файлов, изменения игровой памяти, вызова процедур и функций и многое другое. Третья версия [добавляет такие опкоды](opcodes.md) как вызов функции в SCM, запуск потока или миссии из внешнего файла и другие.
+2. [Плагины](#plugins).<br>Более подробнее о плагинах смотри ниже.
+3. [Добавление скриптов](scripts.md).<br>CLEO 3 позволяет добавить в игру новые скрипты, написанные в Sanny Builder’е без необходимости начала новой игры. Все, что требуется, это написать скрипт, поместить его в папку CLEO и запустить игру (новую или сейв).
 
 :::right light gray p-2
-What game versions are supported? -------
+Какие версии игры поддерживаются? -------
 :::
 
 CLEO 3 supports SA versions 1.0 and 1.01. It was tested with the US 1.0 and EUR 1.01 versions. If you have another version, please, let me know if CLEO 3 works or does not for you.
