--- a/ru/editor/options/hotkeys.html
+++ b/ru/editor/options/hotkeys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Hotkeys</title>
+  <title>Горячие клавиши</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,10 +9,8 @@
 </head>
 <body>
 
-:::l
-![](../../img/options-hotkeys-en.png)
-:::
+![](../../.gitbook/assets/options-hotkeys-ru.png)
 
-Some [hotkeys](../hotkeys.md) are customizable for your comfort. You may set up new keyboard shortcuts for the IDE tools, editor actions and some other features.
+Некоторые [горячие клавиши](../hotkeys.md) могут быть изменены для вашего удобства. Вы можете установить новые сочетания кнопок для вызова инструментов, действий редактора и некоторых других возможностей.
 
 <script src="../../../js/main.min.js"></script>
