--- a/ru/scm-documentation/gta-limits.html
+++ b/ru/scm-documentation/gta-limits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>GTA Limits</title>
+  <title>Скриптовые лимиты</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,41 +11,33 @@
 <table>
 <thead>
 <tr>
-<th> </th>
-<th>GTA III</th>
-<th>Vice City</th>
-<th>San Andreas</th>
-<th>SA Mobile</th>
-<th>LCS</th>
-<th>VCS</th>
+<th></th>
+<th>**GTA III**</th>
+<th>**Vice City**</th>
+<th>**San Andreas**</th>
+<th>**LCS**</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>**main size (in bytes)**</td>
+<td>**размер main.scm (без миссий, в байтах)**</td>
 <td>131072</td>
 <td>225512</td>
 <td>200000</td>
-<td>200000</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
-<td>**mission size (in bytes)**</td>
+<td>**размер одной миссии (в байтах)**</td>
 <td>32768</td>
 <td>35000</td>
 <td>69000</td>
-<td>69000</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
-<td>**number of missions**</td>
+<td>**всего миссий**</td>
 <td>120</td>
 <td>120</td>
 <td>200</td>
-<td></td>
-<td></td>
 <td></td>
 </tr>
 <tr>
@@ -54,43 +46,33 @@
 <td>50</td>
 <td>75</td>
 <td></td>
-<td></td>
-<td></td>
 </tr>
 <tr>
-<td>**model names (2nd segment)**</td>
+<td>**модели во 2-м сегменте main.scm**</td>
 <td>200</td>
 <td>220</td>
 <td>395</td>
 <td></td>
-<td></td>
-<td></td>
 </tr>
 <tr>
-<td>**running scripts**</td>
+<td>**запущенные скрипты**</td>
 <td>128</td>
 <td>128</td>
 <td>96</td>
-<td>96</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
-<td>**local variables**</td>
-<td>16+2 [timers](../coding/variables.md#timer-variables)</td>
-<td>16+2 [timers](../coding/variables.md#timer-variables)</td>
-<td><p>32+2 [timers](../coding/variables.md#timer-variables)</p><p>1024 total in missions</p></td>
-<td>40+2 [timers](../coding/variables.md#timer-variables)</td>
-<td>96+2 [timers](../coding/variables.md#timer-variables)</td>
-<td></td>
+<td>**локальные переменные**</td>
+<td>16+2 [таймера](../coding/variables.md#peremennye-taimery)</td>
+<td>16+2 [таймера](../coding/variables.md#peremennye-taimery)</td>
+<td><p>32+2 <a href="../coding/variables.md#peremennye-taimery">таймера</a></p><p>1024 в миссии</p></td>
+<td>96+2 <a href="../coding/variables.md#peremennye-taimery">таймера</a></td>
 </tr>
 <tr>
-<td>**gosub nesting levels**</td>
+<td>**макс. уровень вложенности gosub**</td>
 <td>4</td>
 <td>6</td>
 <td>8</td>
-<td>8</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
@@ -99,104 +81,73 @@
 <td>48</td>
 <td>96</td>
 <td>96</td>
-<td></td>
-<td></td>
 </tr>
 <tr>
-<td>**jump table labels**</td>
+<td>**метки в jump table**</td>
 <td>N/A</td>
 <td>N/A</td>
 <td>75</td>
-<td></td>
 <td>N/A</td>
-<td></td>
 </tr>
 <tr>
-<td>**external scripts**</td>
+<td>**внешние скрипты**</td>
 <td>N/A</td>
 <td>N/A</td>
 <td>82</td>
-<td></td>
 <td>N/A</td>
-<td></td>
 </tr>
 <tr>
 <td>**external script attachments**</td>
 <td>N/A</td>
 <td>N/A</td>
 <td>70</td>
-<td></td>
 <td>N/A</td>
-<td></td>
 </tr>
 <tr>
-<td>**car generators**</td>
+<td>**парковки**</td>
 <td>160</td>
 <td>185</td>
 <td>500</td>
 <td></td>
-<td></td>
-<td></td>
 </tr>
 <tr>
-<td>**radar blips**</td>
+<td>**метки на радаре**</td>
 <td>32</td>
 <td>75</td>
 <td>175</td>
-<td>250</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
-<td>**pickups**</td>
+<td>**пикапы**</td>
 <td>336</td>
 <td>336</td>
 <td>620</td>
-<td>620</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
-<td>**last opcode**</td>
+<td>**макс. опкод**</td>
 <td>0481</td>
 <td>05a8</td>
 <td>0a4e</td>
-<td>0a90</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
-<td>**spheres**</td>
+<td>**сферы**</td>
 <td>16</td>
 <td>16</td>
 <td>16</td>
-<td></td>
-<td></td>
 <td></td>
 </tr>
 <tr>
-<td>**car saving garage types**</td>
+<td>**типы гаражей, сохраняющих машины**</td>
 <td>16..18</td>
 <td>16..18, 24..32</td>
 <td>16..18, 24..32, 39..45</td>
-<td>16..18, 24..32, 39..45</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>**garages**</td>
-<td>32</td>
-<td>32</td>
-<td>50</td>
-<td></td>
-<td></td>
-<td></td>
 </tr>
 </tbody>
 </table>
-
-{% hint style="info" %}
-Originally posted by CyQ on [GTAForums.com](http://www.gtaforums.com/index.php?showtopic=213017\&view=findpost\&p=3145932)
-{% endhint %}
+<p>{% hint style=&quot;info&quot; %}
+Частично заимствовано из сообщения CyQ на <a href="http://www.gtaforums.com/index.php?showtopic=213017\&amp;view=findpost\&amp;p=3145932">GTAForums.com</a>
+{% endhint %}</p>
 
 <script src="../../js/main.min.js"></script>
