--- a/ru/scm-documentation/gta3/pedtypes.html
+++ b/ru/scm-documentation/gta3/pedtypes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Ped Types</title>
+  <title>Типы пешеходов</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,14 +10,14 @@
 <body>
 
 ```sb3
-009A: 0@ = create_actor &lt;ID&gt; 0 at 0 0 0
+009A: 0@ = create_actor &lt;id&gt; 0 at 0 0 0
 ```
 
 <table>
 <thead>
 <tr>
 <th>ID</th>
-<th>Type</th>
+<th>Тип</th>
 </tr>
 </thead>
 <tbody>
