--- a/ru/scm-documentation/gta3/radar-icons.html
+++ b/ru/scm-documentation/gta3/radar-icons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Radar Icons</title>
+  <title>Иконки радара</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,115 +17,115 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Icon</th>
-<th>Description</th>
+<th>Иконка</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>0</td>
 <td>![](../../../img/gta3/radar/dot.png)</td>
-<td>Small pink square, unused</td>
+<td>Розовая точка</td>
 </tr>
 <tr>
 <td>1</td>
 <td>![](../../../img/gta3/radar/asuka.png)</td>
-<td>Asuka Kasen</td>
+<td>Асука Касен</td>
 </tr>
 <tr>
 <td>2</td>
 <td>![](../../../img/gta3/radar/bomb.png)</td>
-<td>8-Ball&#39;s bomb shop</td>
+<td>Гараж для минирования</td>
 </tr>
 <tr>
 <td>3</td>
 <td>![](../../../img/gta3/radar/catalina.png)</td>
-<td>Catalina</td>
+<td>Каталина</td>
 </tr>
 <tr>
 <td>4</td>
 <td>![](../../../img/gta3/radar/centre.png)</td>
-<td>Player</td>
+<td>Иконка игрока</td>
 </tr>
 <tr>
 <td>5</td>
 <td>![](../../../img/gta3/radar/copcar.png)</td>
-<td>Cop car, unused</td>
+<td>Полицейская машина</td>
 </tr>
 <tr>
 <td>6</td>
 <td>![](../../../img/gta3/radar/don.png)</td>
-<td>Donald Love</td>
+<td>Дональд Лав</td>
 </tr>
 <tr>
 <td>7</td>
 <td>![](../../../img/gta3/radar/eight.png)</td>
-<td>8-Ball</td>
+<td>Лысый</td>
 </tr>
 <tr>
 <td>8</td>
 <td>![](../../../img/gta3/radar/el.png)</td>
-<td>El Burro (Diablo)</td>
+<td>Эль Бурро</td>
 </tr>
 <tr>
 <td>9</td>
 <td>![](../../../img/gta3/radar/ice.png)</td>
-<td>D-Ice (Hood)</td>
+<td>Ди-Айс</td>
 </tr>
 <tr>
 <td>10</td>
 <td>![](../../../img/gta3/radar/joey.png)</td>
-<td>Joey Leone</td>
+<td>Джоуи Леоне</td>
 </tr>
 <tr>
 <td>11</td>
 <td>![](../../../img/gta3/radar/kenji.png)</td>
-<td>Kenji Kasen</td>
+<td>Кенджи Касен</td>
 </tr>
 <tr>
 <td>12</td>
 <td>![](../../../img/gta3/radar/liz.png)</td>
-<td>King Courtney (Yardie)</td>
+<td>Король Куртни</td>
 </tr>
 <tr>
 <td>13</td>
 <td>![](../../../img/gta3/radar/luigi.png)</td>
-<td>Luigi</td>
+<td>Луиджи Готерелли</td>
 </tr>
 <tr>
 <td>14</td>
 <td>![](../../../img/gta3/radar/north.png)</td>
-<td>North</td>
+<td>Север карты</td>
 </tr>
 <tr>
 <td>15</td>
 <td>![](../../../img/gta3/radar/ray.png)</td>
-<td>Ray Machowski</td>
+<td>Рэй Мачовски</td>
 </tr>
 <tr>
 <td>16</td>
 <td>![](../../../img/gta3/radar/sal.png)</td>
-<td>Salvatore Leone</td>
+<td>Сальваторе Леоне</td>
 </tr>
 <tr>
 <td>17</td>
 <td>![](../../../img/gta3/radar/save.png)</td>
-<td>Safehouse</td>
+<td>Дом сохранения</td>
 </tr>
 <tr>
 <td>18</td>
 <td>![](../../../img/gta3/radar/spray.png)</td>
-<td>Pay &#39;n&#39; Spray</td>
+<td>Перекраска</td>
 </tr>
 <tr>
 <td>19</td>
 <td>![](../../../img/gta3/radar/tony.png)</td>
-<td>Toni Cipriani</td>
+<td>Тони Сиприани</td>
 </tr>
 <tr>
 <td>20</td>
 <td>![](../../../img/gta3/radar/weapon.png)</td>
-<td>Ammu-Nation</td>
+<td>Магазин оружия</td>
 </tr>
 </tbody>
 </table>
