--- a/ru/scm-documentation/lcs/weapons.html
+++ b/ru/scm-documentation/lcs/weapons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Weapon IDs</title>
+  <title>Оружие</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,15 +10,15 @@
 <body>
 
 ```sb3
-01B6: give_player $PLAYER_CHAR weapon &lt;ID&gt; ammo 1
+01B6: give_player $PLAYER_CHAR weapon &lt;id оружия&gt; ammo 1
 ```
 
 <table>
 <thead>
 <tr>
-<th>Weapon ID</th>
-<th>Model ID</th>
-<th>Name</th>
+<th>ID оружия</th>
+<th>ID модели</th>
+<th>Название</th>
 </tr>
 </thead>
 <tbody>
