--- a/ru/scm-documentation/sa/buttons.html
+++ b/ru/scm-documentation/sa/buttons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Button IDs</title>
+  <title>Номера клавиш</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,16 +10,16 @@
 <body>
 
 ```sb3
-00E1: key_pressed 0 &lt;button&gt;
+00E1: key_pressed 0 &lt;номер&gt;
 ```
 
 <table>
 <thead>
 <tr>
-<th>Button</th>
-<th>Enum</th>
-<th>On foot</th>
-<th>In a vehicle</th>
+<th>Номер</th>
+<th>Константа</th>
+<th>Пешком</th>
+<th>В машине</th>
 </tr>
 </thead>
 <tbody>
