--- a/ru/scm-documentation/sa/clothes.html
+++ b/ru/scm-documentation/sa/clothes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Player Clothes</title>
+  <title>Одежда</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,18 +10,18 @@
 <body>
 
 ```sb3
-Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt;)
+Player.SetClothes($PLAYER_CHAR, &lt;текстура&gt;, &lt;модель&gt;, &lt;часть тела&gt;)
 ```
 
-## Torso
+## Верхняя одежда
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>[Body part](player-body-parts.html)</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>[Часть тела](player-body-parts.html)</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
@@ -436,15 +436,15 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-## Legs
+## Штаны
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>Часть тела</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
@@ -721,15 +721,15 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-## Shoes
+## Обувь
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>Часть тела</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
@@ -964,15 +964,15 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-## Necklaces
+## Цепи
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>Часть тела</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
@@ -1051,15 +1051,15 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-## Watches
+## Часы
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>Часть тела</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
@@ -1138,15 +1138,15 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-## Glasses
+## Очки
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>Часть тела</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
@@ -1255,15 +1255,15 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-## Hats
+## Головные уборы
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>Часть тела</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
@@ -1612,15 +1612,15 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-## Special
+## Униформа
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>Body part</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>Часть тела</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
