--- a/ru/scm-documentation/sa/gangs.html
+++ b/ru/scm-documentation/sa/gangs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Gang IDs</title>
+  <title>Банды</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
 <table>
 <thead>
 <tr>
-<th>Name</th><th>ID</th><th>GXT</th>
+<th>Название</th><th>ID</th><th>GXT</th>
 </tr>
 </thead>
 <tbody></tbody>
@@ -33,8 +33,8 @@ const keys=[
 ["Mafia",5,"ST_GNG5"],
 ["Mountain Cloud Triad",6,"ST_GNG6"],
 ["Varrio Los Aztecas",7,"ST_GNG7"],
-["(unused)",8,"ST_GNG8"],
-["(unused)",9,"ST_GNG9"]
+["(свободно)",8,"ST_GNG8"],
+["(свободно)",9,"ST_GNG9"]
 ].forEach(function(key, i){
 t+=
 "<tr>\
