--- a/ru/scm-documentation/sa/particles.html
+++ b/ru/scm-documentation/sa/particles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Particle Effects</title>
+  <title>Системы частиц</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,13 +9,13 @@
 </head>
 <body>
 ```sb3
-064B: 0@ = create_particle &lt;id&gt; at X Y Z type 1
+064B: 0@ = create_particle &lt;эффект&gt; at X Y Z type 1
 ```
 <table>
 <thead>
 <tr>
-<th>Description</th>
-<th>ID</th>
+<th>Описание</th>
+<th>Эффект</th>
 </tr>
 </thead>
 <tbody>
@@ -25,86 +25,86 @@
 <script src="../../../js/main.min.js"></script>
 <script>
 const keys=[
-["bloody explosion","blood_heli"],
-["a surf","boat_prop"],
-["small flare","camflash"],
-["steam, as on a carwash","carwashspray"],
-["cement","cement"],
-["fast clouds","cloudfast"],
-["puff of a coke","coke_puff"],
-["a pouring water","coke_trail"],
-["a smoke from a cigarette","cigarette_smoke"],
-["explosion and splinters of a box","explosion_barrel"],
-["explosion and splinters of the large box","explosion_crate"],
-["a smoke with sparks","explosion_door"],
-["a small smoke","exhale"],
-["explosion, as from the machine","explosion_fuel_car"],
-["the large explosion","explosion_large"],
-["average explosion","explosion_medium"],
-["explosion, as from a movotov cocktail","explosion_molotov"],
-["small explosion","explosion_small"],
-["very small explosion","explosion_tiny"],
-["foam of the fire extinguisher","extinguisher"],
-["small fire","flame"],
-["fire","fire"],
-["average fire","fire_med"],
-["large fire","fire_large"],
-["fire of the flamethrower","flamethrower"],
-["fire, as from a burning motorcycle","fire_bike"],
-["fire, as from the burning machine","fire_car"],
-["as the bullet from a trunk takes off","gunflash"],
-["a smoke from a gun","gunsmoke"],
-["insects","insects"],
-["a dust, as from the helicopter","heli_dust"],
-["a jetpack's fire","jetpack"],
-["fire from the muffler of the machine, as during use of nitrogen","jetthrust"],
-["nitro","nitro"],
-["fire from a Molotov Cocktail","molotov_flame"],
-["smoke from damaged car","overheat_car"],
-["wrecked electro-machine","overheat_car_electric"],
-["foam","prt_boatsplash"],
-["splinters from a box","prt_cardebris"],
-["a dense white smoke","prt_collisionsmoke"],
-["a crashing glass","prt_glass"],
-["shells","prt_gunshell"],
-["sand, which was scattered","prt_sand"],
-["there is less sand, than in previous animation","prt_sand2"],
-["- a grey smoke","prt_smokeII_3_expand"],
-["there is a lot of grey smoke","prt_smoke_huge"],
-["of a spark","prt_spark"],
-["the large sparks","prt_spark_2"],
-["burst","prt_splash"],
-["a wave","prt_wake"],
-["sparks","prt_watersplash"],
-["sparks from wheels of the car","prt_wheeldirt"],
-["a jet","petrolcan"],
-["belch","puke"],
-["there is a lot of smoke","riot_smoke"],
-["spray","spraycan"],
-["a smoke","smoke30lit"],
-["a rich smoke","smoke30m"],
-["more richer smoke","smoke50lit"],
-["fireworks","shootlight"],
-["fireworks","smoke_flare"],
-["a shot from the tank","tank_fire"],
-["gas, as from gas grenade","teargas"],
-["gas, as from small gas grenade","teargasAD"],
-["leaf falling","tree_hit_fir"],
-["falling of pair large leafs","tree_hit_palm"],
-["slowly dissipating a smoke","vent"],
-["practically too most","vent2"],
-["the large flow of water","water_hydrant"],
-["circles on water","water_ripples"],
-["the large sparks from water","water_speed"],
-["small sparks from water","water_splash"],
-["average sparks","water_splash_big"],
-["sparks, only them it is not visible almost","water_splsh_sml"],
-["small sparks at navigation","water_swim"],
-["there is a lot of pair","waterfall_end"],
-["the large flow of water","water_fnt_tme"],
-["water of a fountain","water_fountain"],
-["a disappearing heap pair","wallbust"],
-["smoke","WS_factorysmoke"]
+["Кровавый взрыв","blood_heli"],
+["прибой","boat_prop"],
+["Маленькая вспышка","camflash"],
+["Пар, как на автомойке.","carwashspray"],
+["цемент","cement"],
+["Летающие облака","cloudfast"],
+["Затяжка коксом","coke_puff"],
+["Выливающаяся вода","coke_trail"],
+["Дым от сигареты","cigarette_smoke"],
+["Взрыв и осколки ящика","explosion_barrel"],
+["Взрыв и осколки большого ящика","explosion_crate"],
+["Дым с искрами","explosion_door"],
+["Маленький дым","exhale"],
+["Взрыв, как от машины","explosion_fuel_car"],
+["Большой взрыв","explosion_large"],
+["Средний взрыв","explosion_medium"],
+["Взрыв, как от коктейля Молотова","explosion_molotov"],
+["Небольшой взрыв","explosion_small"],
+["Маленький взрыв","explosion_tiny"],
+["Пена огнетушителя","extinguisher"],
+["Небольшой огонек","flame"],
+["огонь","fire"],
+["Средний огонь","fire_med"],
+["Большой огонь","fire_large"],
+["Огонь огнемета","flamethrower"],
+["Огонь, как от горящего мотоцикла","fire_bike"],
+["Огонь, как от горящей машины","fire_car"],
+["Как вылетает пуля из ствола","gunflash"],
+["Дым от вылетевшей пули","gunsmoke"],
+["насекомые","insects"],
+["Пыль, как от вертолета","heli_dust"],
+["Огонь, как из сопел джетпака","jetpack"],
+["Огонь из глушителя машины, как во время использования азота","jetthrust"],
+["нитро","nitro"],
+["Огонь от коктейля Молотова","molotov_flame"],
+["Дымящаяся машина","overheat_car"],
+["Поврежденная электро-машина","overheat_car_electric"],
+["пена","prt_boatsplash"],
+["Осколки от коробки","prt_cardebris"],
+["Плотный белый дым","prt_collisionsmoke"],
+["Разбивающееся стекло","prt_glass"],
+["Гильзы","prt_gunshell"],
+["Песок, который рассыпался","prt_sand"],
+["Немного меньше песка чем в предыдущей анимации","prt_sand2"],
+["Серый дым","prt_smokeII_3_expand"],
+["Много серого дыма","prt_smoke_huge"],
+["Искры","prt_spark"],
+["Большие искры","prt_spark_2"],
+["Всплеск","prt_splash"],
+["Волна","prt_wake"],
+["Брызги","prt_watersplash"],
+["Брызги из под колес машины","prt_wheeldirt"],
+["Струя, как писание","petrolcan"],
+["Рыгачка \(блевотина\)","puke"],
+["Много дыма","riot_smoke"],
+["Спрей зеленой краски","spraycan"],
+["Дым","smoke30lit"],
+["Густой дым","smoke30m"],
+["Еще более густой дым","smoke50lit"],
+["Фейерверк","shootlight"],
+["Тоже фейерверк","smoke_flare"],
+["Огонь от выстрела из танка","tank_fire"],
+["Газ, как от дымовой гранаты","teargas"],
+["Газ, как от малой дымовой гранаты","teargasAD"],
+["Падение листьев","tree_hit_fir"],
+["Падение пары больших листьев","tree_hit_palm"],
+["Медленно рассеивающийся дым","vent"],
+["Практически тоже самое","vent2"],
+["Большой поток воды","water_hydrant"],
+["Круги на воде","water_ripples"],
+["Большие брызги от воды","water_speed"],
+["Маленькие брызги от воды","water_splash"],
+["Средние брызги","water_splash_big"],
+["Брызги, только их почти не видно","water_splsh_sml"],
+["Маленькие брызги при плавании","water_swim"],
+["Много пара","waterfall_end"],
+["Большой поток воды","water_fnt_tme"],
+["Вода фонтана","water_fountain"],
+["Исчезающая куча пара","wallbust"],
+["Дым как от труб","WS_factorysmoke"]
 ].forEach(function(key, i){
 t+=
 "<tr>\
