--- a/ru/scm-documentation/sa/pedtypes.html
+++ b/ru/scm-documentation/sa/pedtypes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Ped Types</title>
+  <title>Типы пешеходов</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
 <body>
 
 ```sb3
-009A: $Actor = create_actor &lt;type&gt; #MODEL at X Y Z 
+009A: $Actor = create_actor &lt;тип&gt; #MODEL at X Y Z 
 ```
 
 <table>
