--- a/ru/scm-documentation/sa/player-body-parts.html
+++ b/ru/scm-documentation/sa/player-body-parts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Player Body Parts</title>
+  <title>Части тела игрока</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,81 +17,100 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Description</th>
+<th>Название</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>0</td>
-<td>[Torso](clothes.md#torso)</td>
+<td><a href="clothes.md#verkhnyaya-odezhda">Torso</a></td>
+<td>тело</td>
 </tr>
 <tr>
 <td>1</td>
-<td>[Head](haircuts.md)</td>
+<td><a href="haircuts.md">Head</a></td>
+<td>голова</td>
 </tr>
 <tr>
 <td>2</td>
-<td>[Legs](clothes.md#legs)</td>
+<td><a href="clothes.md#shtany">Legs</a></td>
+<td>ноги</td>
 </tr>
 <tr>
 <td>3</td>
-<td>[Shoes](clothes.md#legs)</td>
+<td><a href="clothes.md#obuv">Shoes</a></td>
+<td>обувь</td>
 </tr>
 <tr>
 <td>4</td>
-<td>[Lower left arm](tattoos.md#lower-left-arm)</td>
+<td><a href="tattoos.md#lower-left-arm">Lower left arm</a></td>
+<td>левое предплечье</td>
 </tr>
 <tr>
 <td>5</td>
-<td>[Upper left arm](tattoos.md#upper-left-arm)</td>
+<td><a href="tattoos.md#upper-left-arm">Upper left arm</a></td>
+<td>левое плечо</td>
 </tr>
 <tr>
 <td>6</td>
-<td>[Upper right arm](tattoos.md#upper-right-arm)</td>
+<td><a href="tattoos.md#upper-right-arm">Upper right arm</a></td>
+<td>правое плечо</td>
 </tr>
 <tr>
 <td>7</td>
-<td>[Lower right arm](tattoos.md#lower-right-arm)</td>
+<td><a href="tattoos.md#lower-right-arm">Lower right arm</a></td>
+<td>правое предплечье</td>
 </tr>
 <tr>
 <td>8</td>
-<td>[Back top](tattoos.md#back-top)</td>
+<td><a href="tattoos.md#back-top">Back top</a></td>
+<td>верх спины</td>
 </tr>
 <tr>
 <td>9</td>
-<td>[Left chest](tattoos.md#left-chest)</td>
+<td><a href="tattoos.md#left-chest">Left chest</a></td>
+<td>левая часть груди</td>
 </tr>
 <tr>
 <td>10</td>
-<td>[Right chest](tattoos.md#right-chest)</td>
+<td><a href="tattoos.md#right-chest">Right chest</a></td>
+<td>правая часть груди</td>
 </tr>
 <tr>
 <td>11</td>
-<td>[Stomach](tattoos.md#stomach)</td>
+<td><a href="tattoos.md#stomach">Stomach</a></td>
+<td>живот</td>
 </tr>
 <tr>
 <td>12</td>
-<td>[Lower back](tattoos.md#lower-back)</td>
+<td><a href="tattoos.md#lower-back">Lower back</a></td>
+<td>низ спины</td>
 </tr>
 <tr>
 <td>13</td>
-<td>[Necklace](clothes.md#necklaces)</td>
+<td><a href="clothes.md#cepi">Necklace</a></td>
+<td>шея</td>
 </tr>
 <tr>
 <td>14</td>
-<td>[Bracelet/Watch](clothes.md#watches)</td>
+<td><a href="clothes.md#chasy">Bracelet/Watch</a></td>
+<td>запястье</td>
 </tr>
 <tr>
 <td>15</td>
-<td>[Glasses](clothes.md#glasses)</td>
+<td><a href="clothes.md#ochki">Glasses</a></td>
+<td>очки</td>
 </tr>
 <tr>
 <td>16</td>
-<td>[Hats](clothes.md#hats)</td>
+<td><a href="clothes.md#golovnye-ubory">Hats</a></td>
+<td>головной убор</td>
 </tr>
 <tr>
 <td>17</td>
-<td>[Special clothes as Valet, Gimp suit](clothes.md#special)</td>
+<td><a href="clothes.md#uniforma">Special skin</a></td>
+<td>униформа</td>
 </tr>
 </tbody>
 </table>
