--- a/ru/scm-documentation/sa/special-actors.html
+++ b/ru/scm-documentation/sa/special-actors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Special Actors</title>
+  <title>Персонажи</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Description</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
