--- a/ru/scm-documentation/vc/gangs.html
+++ b/ru/scm-documentation/vc/gangs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Gang IDs</title>
+  <title>Банды</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Name</th>
+<th>Название</th>
 </tr>
 </thead>
 <tbody>
@@ -42,7 +42,7 @@
 </tr>
 <tr>
 <td>6</td>
-<td>Vercetti (yours)</td>
+<td>Vercetti (ваша)</td>
 </tr>
 <tr>
 <td>7</td>
@@ -50,7 +50,7 @@
 </tr>
 <tr>
 <td>8</td>
-<td>Army (special gang)</td>
+<td>Army (особая группировка)</td>
 </tr>
 </tbody>
 </table>
