--- a/ru/scm-documentation/vc/garages.html
+++ b/ru/scm-documentation/vc/garages.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Garage IDs</title>
+  <title>Гаражи</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,8 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Enum</th>
-<th>Description</th>
+<th>&#x41A;&#x43E;&#x43D;&#x441;&#x442;&#x430;&#x43D;&#x442;&#x430;</th>
+<th>&#x41E;&#x43F;&#x438;&#x441;&#x430;&#x43D;&#x438;&#x435;</th>
 </tr>
 </thead>
 <tbody>
