--- a/ru/scm-documentation/vc/weapons.html
+++ b/ru/scm-documentation/vc/weapons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Weapon IDs</title>
+  <title>Типы оружия</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,17 +10,17 @@
 <body>
 
 ```sb3
-04B8: get_char_weapon &lt;char&gt; in_slot_id &lt;slot&gt; type_to &lt;type&gt; ammo_to &lt;ammo&gt; model_to &lt;model&gt; 
+04B8: get_char_weapon &lt;персонаж&gt; in_slot_id &lt;слот&gt; type_to &lt;тип&gt; ammo_to &lt;патроны&gt; model_to &lt;модель&gt;
 ```
 
 <table>
 <thead>
 <tr>
-<th>Type</th>
-<th>Slot</th>
-<th>Name</th>
-<th>Model</th>
-<th>Icon</th>
+<th>Тип</th>
+<th>Слот</th>
+<th>Название</th>
+<th>Модель</th>
+<th>Иконка</th>
 </tr>
 </thead>
 <tbody>
