--- a/ru/scm-documentation/vcs/gangs.html
+++ b/ru/scm-documentation/vcs/gangs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Gang IDs</title>
+  <title>Банды</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,13 +12,13 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Name</th>
+<th>Название</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>0</td>
-<td>Umberto&#39;s guys</td>
+<td>Umberto's guys</td>
 </tr>
 <tr>
 <td>1</td>
@@ -50,7 +50,7 @@
 </tr>
 <tr>
 <td>8</td>
-<td>Marty&#39;s</td>
+<td>Marty's</td>
 </tr>
 </tbody>
 </table>
