--- a/ru/edit-modes/customlabels.ini.html
+++ b/ru/edit-modes/customlabels.ini.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-You can give labels custom names that do not depend on the disassembler [configuration](../editor/options/formats.md#label-name-format). Those names are defined in the file `CustomLabels.ini` (one for each [edit mode](README.md#labels)).
+Вы можете присваивать меткам специфичные имена, которые не будут зависеть от [опций](../editor/options/formats.md#imena-metok) дизассемблера. Такие имена содержатся в файле `CustomLabels.ini` \(отдельный для каждого [режима редактирования](README.md#labels)\).
 
-## File Syntax
+## Формат файла
 
-`&lt;label offset>=&lt;custom name>`
+`<адрес метки>=<имя>`
 
-If the disassembler finds a label at the specified offset, this label gets the custom name.
+Если в дизассемблируемом файле есть метка по указанному адресу, она получит присвоенное имя.
 
-To find out offset values enable the `CODE_OFFSETS` debug [option](../editor/console.md#code_offsets). After disassembling, a number in front of the script instruction is the offset value.
+Узнать адрес метки можно, включив отладочную [опцию](../editor/console.md#code_offsets) `CODE_OFFSETS`. После дизассемблирования число в начале каждой инструкции будет ее адресом.
 
 <script src="../../js/main.min.js"></script>
