--- a/ru/edit-modes/enums.txt.html
+++ b/ru/edit-modes/enums.txt.html
@@ -9,29 +9,29 @@
 </head>
 <body>
 
-An **enumerated type** or **enum** is a finite set of constants (called _enum fields_) under a common prefix (_enum name_).
+**Перечисляемый тип** или **перечисление** - это набор констант \(называемых _полями перечисления_\), имеющих общее имя \(_имя перечисления_\).
 
-Enumerated types have a few advantages over ordinary constants. They don't pollute the global namespace and are the first-class citizens in the type system. Parameters with an enumerated type are limited on allowed values range which in turn helps to avoid errors caused by an invalid id usage.
+Перечисления имеют несколько преимуществ перед обычными константами. Они не засоряют общее пространство имен и являются участниками системы типов. Параметры, у которых перечисление является типом, имеют ограниченную область допустимых значений, что помогает избегать ошибок, связанных с неверным значением параметра.
 
-**Enums.txt** is a text file that defines a list of the enumerated types available in the [edit mode](README.md).
+**Enums.txt** - это текстовый файл, который содержит перечисления, доступные для [режима редактирования](README.md).
 
-## File Format
+## Формат файла
 
-Each enumerated type is defined with the following syntax:
-```
-enum &lt;enum name&gt;
-    &lt;enum fields&gt;
-end```
+Каждое перечисление задается следующим образом:
 
-`enum name` -  any combination of letters, digits and `_` \
-`enum fields` - one or many lines with the format:
+`enum <имя перечисления>  
+<поля перечисления>  
+end`
 
-- `&lt;enum field name&gt; [= &lt;enum field value&gt;]`
-- where
-- `enum field name` - any combination of letters, digits and `_`
-- `enum field value` - a number or a [string literal](../coding/data-types.md#string-literals) enclosed in double quotes. if not present, the compiler assigns a [new value](enums.txt.md#enum-values) automatically.
+`имя перечисления` - это любая комбинация букв, цифр и `_`   
+`поля перечисления` - одна или несколько строк в формате:  
 
-```
+`<имя поля> [= <значение поля>]`
+
+`имя поля` - любая комбинация букв, цифр и `_`   
+`значение поля` - число или строковый литерал, заключенный в двойные кавычки. Если отсутствует, компилятор присваивает [новую константу](enums.txt.md#format-faila) автоматически.
+
+```enum
 enum Town
   LS = 0
   SF = 1
@@ -39,25 +39,25 @@ enum Town
 end
 ```
 
-Enum fields can be separated with line breaks (see the example above) or with a comma:
+Поля перечисления могут разделяться переносом строки \(как в примере выше\) или запятой:
 
-```
+```enum
 enum Town
   LS = 0, SF = 1, LV = 2
 end
 ```
 
-It is possible to define many enumerated types in one file. Each enum must have an unique name.
+В одном файле может быть несколько перечислений. Каждое из них должно иметь уникальное имя.
 
-<div class="warning">
-No comments or any extra syntax are allowed in the enums file.
-</div>
+{% hint style="warning" %}
+Файл с перечислениями не может содержать комментарии или незнакомый синтаксис.
+{% endhint %}
 
-### Enum fields
+### Поля перечисления
 
-Each enum field gets a value either implicitly or explicitly. Explicit values are getting assigned when a combination of the equal sign and the value follows the field name. Sanny Builder allows integer numbers and string literals to be used as enum values:
+Каждое поле перечисления представляет собой константу, которая присваивается явно либо неявно. Явным образом это происходит, если после имени поля стоит знак `=` и допустимая константа:
 
-```
+```enum
 enum Town
   LS = 0
   SF = 1
@@ -65,20 +65,20 @@ enum Town
 end
 ```
 
-`Town.LS` is equal to `0`, `Town.SF` is equal to `1` and `Town.LV` is equal to `2`.
+`Town.LS` представляет число `0`, `Town.SF` представляет число `1` и `Town.LV` представляет число `2`.
 
-```
+```enum
 enum TicTacToe
    Player1 = "X"
    Player2 = "O"
 end
 ```
 
-`TicTacToe.Player1` is equal to `X` and `TicTacToe.Player2` is equal to `O`.
+`TicTacToe.Player1` представляет строковый литерал `X` и `TicTacToe.Player2` представляет строковый литерал `O`.
 
-Implicit values are getting assigned automatically starting from `0` for the first field, `1` for the second field, `2` for the third and so on:
+Если полю перечисления явным образом не присвоена константа, это происходит автоматически. Первому полю присваивается `0`, второму `1`, третьему `2` и т.д.:
 
-```
+```enum
 enum Town
   LS
   SF
@@ -86,13 +86,13 @@ enum Town
 end
 ```
 
-`Town.LS` is equal to `0`, `Town.SF` is equal to `1` and `Town.LV` is equal to `2`.
+`Town.LS` представляет число `0`, `Town.SF` представляет число `1` и `Town.LV` представляет число `2`.
 
-For a mix of implicit and explicit values the following rules take place:
+Если в одном перечислении используются и явное, и неявное присвоения, это происходит по следующим правилам:
 
-* a field following an explicit value gets assigned to that value incremented by `1`
+* полю, которое следует за явно присвоенным числом, присваивается это число плюс 1:
 
-```
+```enum
 enum E
   A = 10
   B
@@ -104,9 +104,9 @@ end
 
 `E.A` = `10`, `E.B` = `11`, `E.C` = `100`, `E.D` = `101`, `E.E` = `102`
 
-*  a field following an explicit string value gets its value after the field name:
+* полю, которое следует за явно присвоенным строковым литералом, присваивается литерал, дублирующий имя поля:
 
-```
+```enum
 enum Month
   Jan = "January"
   Feb = "February"
@@ -114,22 +114,19 @@ enum Month
 end
 ```
 
-`Month.Jan` = `"January`, \
-`Month.Feb` = `"February`, \
-`Month.March` = `"March"`
+`Month.Jan` = `"January"`, `Month.Feb` = `"February"`, `Month.March` = `"March"`
 
-<div class="warning">
-An enum can't have a mix of both integer and string values.  The first explicit value takes control of what type of values this enum gets:
+{% hint style="warning" %}
+Перечисление не может одновременно представлять числа и строковые литералы. Тип перечисления определяется по первой явно присвоенной константе:
 
-```
+```enum
 enum Int
   X, Y // X = 0, Y = 1,
 end
-
 enum String
   X, Y = "Y" // X = "X", Y = "Y"
 end
 ```
-</div>
+{% endhint %}
 
 <script src="../../js/main.min.js"></script>
