--- a/ru/edit-modes/extensions.html
+++ b/ru/edit-modes/extensions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Extensions</title>
+  <title>Расширения</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,90 +9,180 @@
 </head>
 <body>
 
-An **extension** is a set of new instructions added to the vanilla game. The [CLEO library](https://cleo.li) and its plugins is the most known way of adding those.
+**Расширение** - это набор новых инструкций \(опкодов\), добавленных в игру. [Библиотека CLEO](https://cleo.li) и плагины к ней являются наиболее известным источником таких наборов.
 
-To make Sanny Builder aware of the custom instructions and explicitly signal their intentional usage, a script must have `{$USE}` [directive](../coding/directives.md#usduse). The `{$USE}` directive enables a particular set of instructions (see below the [list of extensions](extensions.md#extensions-list)).
+Чтобы Sanny Builder знал о намерении использовать в скрипте нестандартные опкоды, скрипт должен иметь [директиву](../coding/directives.md#usduse) `{$USE}`. Эта директива подключает дополнительный набор инструкций \(см. ниже [список доступных расширений](extensions.md#extensions-list)\):
 
-```
+```sb3
 {$USE CLEO}
 {$USE ini}
 {$USE CLEO+}
 ```
 
-Each opcode included in Sanny Builder's [INI files](opcodes-list-scm.ini.md) has been categorized to belong to some extension. Currently it is done via the file `extensions.txt`.
+Каждый опкод, доступный в [INI файлах](opcodes-list-scm.ini.md) Sanny Builder, принадлежит к какому-либо расширению. Это сделано через файл `extensions.txt`. 
 
 {% hint style="info" %}
-See [#74](https://github.com/sannybuilder/dev/issues/74) for more information on how this feature is expected to function in the future.
+См. [\#74](https://github.com/sannybuilder/dev/issues/74) чтобы узнать о дальнейших планах по развитию расширений.
 {% endhint %}
 
-## Implicit Extensions
+### Расширения по умолчанию
 
-Standard game opcodes have been included in the `default` extension that is implicitly available in any script. `{$USE default}` is possible but redundant.
+Стандартные игровые опкоды включены в расширение с именем `default`, которое доступно по умолчанию в каждом скрипте.  Использование директивы `{$USE default}` допускается, но является избыточным.
 
-Using `{$CLEO}` [directive](../coding/directives.md#usdcleo) also implies `{$USE CLEO}` so standard CLEO opcodes are available to the compiler already.
+Использование [директивы](../coding/directives.md#usdcleo) `{$CLEO}` также подразумевает   `{$USE CLEO}`, что делает стандартные CLEO опкоды доступными компилятору.
 
-## Extensions List
+### Список расширений <a id="extensions-list"></a>
 
-Sanny Builder ships some common and recognized extensions for different edit modes:
+Sanny Builder включает в себя общие и популярные расширения для различных режимов редактирования:
 
 <table>
-<thead>
-<tr>
-<th>Extension Name</th>
-<th>Source</th>
-<th>Edit Modes where available</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td> **CLEO**  `{$USE CLEO}`</td>
-<td>CLEO for GTA III<br>CLEO for Vice City  CLEO 4.4  CLEO Android</td>
-<td>GTA III  Vice City  GTA SA v1.0, v2.0, (v1.0 - SCR)  SA Mobile  VC Mobile</td>
-</tr>
-<tr>
-<td> **ini**  `{$USE ini}`</td>
-<td>IniFiles.cleo plugin<br>(ships with CLEO)</td>
-<td>GTA III<br>Vice City  GTA SA v1.0, v2.0, (v1.0 - SCR)</td>
-</tr>
-<tr>
-<td> **file**  `{$USE file}`</td>
-<td>FileSystemOperations plugin<br>(ships with CLEO)</td>
-<td>GTA III<br>Vice City  GTA SA v1.0, v2.0, (v1.0 - SCR)</td>
-</tr>
-<tr>
-<td> **bitwise**  `{$USE bitwise}`</td>
-<td>IntOperations plugin<br>(ships with CLEO4)</td>
-<td>GTA III<br>Vice City  GTA SA v1.0, v2.0, (v1.0 - SCR)</td>
-</tr>
-<tr>
-<td> **clipboard**  `{$USE clipboard}`</td>
-<td>ClipboardControl plugin</td>
-<td>GTA III<br>Vice City  GTA SA v1.0, v2.0, (v1.0 - SCR)</td>
-</tr>
-<tr>
-<td> **memory**  `{$USE memory}`</td>
-<td>MemoryModule plugin</td>
-<td>GTA III<br>Vice City</td>
-</tr>
-<tr>
-<td> **CLEO+**  `{$USE CLEO+}`</td>
-<td>CLEO+ plugin</td>
-<td>GTA SA v1.0, v2.0, (v1.0 - SCR)</td>
-</tr>
-<tr>
-<td> **newOpcodes**  `{$USE newOpcodes}`</td>
-<td>newOpcodes plugin</td>
-<td>GTA SA v1.0, v2.0</td>
-</tr>
-<tr>
-<td> **Restoration**  `{$USE Restoration}`</td>
-<td><a href="https://gtamods.com/wiki/Opcodes_Restoration_Project">Opcode Restoration Project</a></td>
-<td>Vice City</td>
-</tr>
-</tbody>
+  <thead>
+    <tr>
+      <th style="text-align:left">&#x418;&#x43C;&#x44F; &#x440;&#x430;&#x441;&#x448;&#x438;&#x440;&#x435;&#x43D;&#x438;&#x44F;</th>
+      <th
+      style="text-align:left">&#x418;&#x441;&#x442;&#x43E;&#x447;&#x43D;&#x438;&#x43A;</th>
+        <th style="text-align:left">&#x420;&#x435;&#x436;&#x438;&#x43C;&#x44B;, &#x432; &#x43A;&#x43E;&#x442;&#x43E;&#x440;&#x44B;&#x445;
+          &#x434;&#x43E;&#x441;&#x442;&#x443;&#x43F;&#x43D;&#x43E;</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align:left">
+        <p><b>CLEO</b>
+        </p>
+        <p><code>{$USE CLEO}</code>
+        </p>
+      </td>
+      <td style="text-align:left">
+        <p>CLEO &#x434;&#x43B;&#x44F; GTA III
+          <br />CLEO &#x434;&#x43B;&#x44F; Vice City</p>
+        <p>CLEO 4.4</p>
+      </td>
+      <td style="text-align:left">
+        <p>GTA III</p>
+        <p>Vice City</p>
+        <p>GTA SA v1.0, v2.0, (v1.0 - SCR)</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>ini</b>
+        </p>
+        <p><code>{$USE ini}</code>
+        </p>
+      </td>
+      <td style="text-align:left">&#x43F;&#x43B;&#x430;&#x433;&#x438;&#x43D; IniFiles.cleo
+        <br />(&#x43F;&#x43E;&#x441;&#x442;&#x430;&#x432;&#x43B;&#x44F;&#x435;&#x442;&#x441;&#x44F;
+        &#x441; CLEO)</td>
+      <td style="text-align:left">
+        <p>GTA III
+          <br />Vice City</p>
+        <p>GTA SA v1.0, v2.0, (v1.0 - SCR)</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>file</b>
+        </p>
+        <p><code>{$USE file}</code>
+        </p>
+      </td>
+      <td style="text-align:left">&#x43F;&#x43B;&#x430;&#x433;&#x438;&#x43D; FileSystemOperations
+        <br />(&#x43F;&#x43E;&#x441;&#x442;&#x430;&#x432;&#x43B;&#x44F;&#x435;&#x442;&#x441;&#x44F;
+        &#x441; CLEO)</td>
+      <td style="text-align:left">
+        <p>GTA III
+          <br />Vice City</p>
+        <p>GTA SA v1.0, v2.0, (v1.0 - SCR)</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>bitwise</b>
+        </p>
+        <p><code>{$USE bitwise}</code>
+        </p>
+      </td>
+      <td style="text-align:left">&#x43F;&#x43B;&#x430;&#x433;&#x438;&#x43D; IntOperations
+        <br />(&#x43F;&#x43E;&#x441;&#x442;&#x430;&#x432;&#x43B;&#x44F;&#x435;&#x442;&#x441;&#x44F;
+        &#x441; CLEO4)</td>
+      <td style="text-align:left">
+        <p>GTA III
+          <br />Vice City</p>
+        <p>GTA SA v1.0, v2.0, (v1.0 - SCR)</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>clipboard</b>
+        </p>
+        <p><code>{$USE clipboard}</code>
+        </p>
+      </td>
+      <td style="text-align:left">&#x43F;&#x43B;&#x430;&#x433;&#x438;&#x43D; ClipboardControl</td>
+      <td style="text-align:left">
+        <p>GTA III
+          <br />Vice City</p>
+        <p>GTA SA v1.0, v2.0, (v1.0 - SCR)</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>memory</b>
+        </p>
+        <p><code>{$USE memory}</code>
+        </p>
+      </td>
+      <td style="text-align:left">&#x43F;&#x43B;&#x430;&#x433;&#x438;&#x43D; MemoryModule</td>
+      <td style="text-align:left">GTA III
+        <br />Vice City</td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>CLEO+</b>
+        </p>
+        <p><code>{$USE CLEO+}</code>
+        </p>
+      </td>
+      <td style="text-align:left">&#x43F;&#x43B;&#x430;&#x433;&#x438;&#x43D; CLEO+</td>
+      <td style="text-align:left">GTA SA v1.0, v2.0, (v1.0 - SCR)</td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>newOpcodes</b>
+        </p>
+        <p><code>{$USE newOpcodes}</code>
+        </p>
+      </td>
+      <td style="text-align:left">&#x43F;&#x43B;&#x430;&#x433;&#x438;&#x43D; newOpcodes</td>
+      <td style="text-align:left">GTA SA v1.0, v2.0</td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>vcmobile</b>
+        </p>
+        <p><code>{$USE vcmobile}</code>
+        </p>
+      </td>
+      <td style="text-align:left">Vice City &#x43D;&#x430; &#x43C;&#x43E;&#x431;&#x438;&#x43B;&#x44C;&#x43D;&#x44B;&#x445;
+        &#x443;&#x441;&#x442;&#x440;&#x43E;&#x439;&#x441;&#x442;&#x432;&#x430;&#x445;</td>
+      <td
+      style="text-align:left">Vice City</td>
+    </tr>
+    <tr>
+      <td style="text-align:left">
+        <p><b>Restoration</b>
+        </p>
+        <p><code>{$USE Restoration}</code>
+        </p>
+      </td>
+      <td style="text-align:left"><a href="https://gtamods.com/wiki/Opcodes_Restoration_Project">Opcode Restoration Project</a>
+      </td>
+      <td style="text-align:left">Vice City</td>
+    </tr>
+  </tbody>
 </table>
 
-
-Using opcodes from the third-party libraries not listed there is possible, the compiler will not require the `{$USE}` directive.
+Допускается использование опкодов из источников, не перечисленных выше, при этом компилятор не будет требовать использование директивы `{$USE}`.
 
 <script src="../../js/main.min.js"></script>
