--- a/ru/edit-modes/opcodes-list-scm.ini.html
+++ b/ru/edit-modes/opcodes-list-scm.ini.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Opcodes List (SCM.INI)</title>
+  <title>Список опкодов (SCM.INI)</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,17 +10,17 @@
 <body>
 
 {% hint style="success" %}
-Opcodes documentation can be found in [Sanny Builder Library](https://library.sannybuilder.com).
+Документацию по опкодам можно найти в [Sanny Builder Library](https://library.sannybuilder.com/).
 {% endhint %}
 
-`SCM.INI` is the file containing information about opcodes used during disassembling and compiling script files. Sanny Builder ships a list of opcodes for each [edit mode](README.md#opcodes).
+Основной файл, который обеспечивает компиляцию и дизассемблирование скриптов, – `INI` файл со списком опкодов. В Sanny Builder есть список опкодов для каждого [режима редактирования](README.md#opcodes).
 
 <table>
 <thead>
 <tr>
-<th>Game</th>
-<th>File Name</th>
-<th>Location</th>
+<th>Игра</th>
+<th>Имя файла</th>
+<th>Директория</th>
 </tr>
 </thead>
 <tbody>
@@ -62,89 +62,95 @@ Opcodes documentation can be found in [Sanny Builder Library](https://library.sa
 </tbody>
 </table>
 
-## File Format
 
-Lines starting with `;` are ignored.
+## Формат файла
 
-### Metadata
+Строки, начинающиеся с `;`, игнорируются.
 
-Special INI parameters provide metadata information about the opcodes list.\
-\
-`VERSION` – defines the version of this file. See the [$VERSION](../coding/directives.md#usdversion) directive\
-`PUBLISHER` – who authored this version\
-`DATE` – the update date.
+### Метаданные
 
-The disassembler prints the metadata in the first line of the output file.
+Файл может иметь особые параметры, которые содержат метаданные о его текущей версии.
 
-### Opcode Definition
+`VERSION` – номер версии. См. директиву [$VERSION](../coding/directives.md#usdversion)  
+`PUBLISHER` – автор изменений   
+`DATE` – дата обновления  
+  
+Дизассемблер выводит эту информацию в комментарии на первой строке исходника.
 
-Each line has the following syntax:\
-\
-`xxxx=N, yyyy`\
-`XXXX` – the opcode number\
-`N` – the number of parameters\
-`yyyy` – the opcode description.
+### Опкоды
 
-The opcode number and the number of parameters are final and can't be changed. The description is open to modifications.
+Каждая строка с опкодом имеет следующий формат:
 
-If the INI file contains multiple definitions for the same opcode, the latter controls.
+`xxxx=N, yyyy`   
+`XXXX` – номер опкода  
+`N` – кол-во параметров  
+`yyyy` – описание опкода
 
-By convention a description for a conditional opcode starts with two spaces.
+Не допускается редактирование первых двух значений \(номер опкода и кол-во параметров\). Описание опкода может меняться свободно.
 
-### Opcode Parameters
+Если в `INI` файле содержится несколько определений для одного и того же опкода, используется последнее.
 
-A parameter is a dynamic part of the opcode. They start and end with `%` 
+Существует соглашение, по которому описание условного опкода всегда начинается с двух пробелов.
 
-```
+### Параметры опкодов
+
+Параметры - это динамическая часть опкода. В описании опкода они начинаются и заканчиваются `%` 
+
+```ini
 0001=1,wait %1d% ms
 ```
 
-This line is the definition of the opcode `0001`. When the disassembler finds `0001` in a script it prints the words`wait` and `ms` with the parameter value in-between to the output file.
+Данная строка указывает дизассемблеру, что для опкода `0001` следует написать слова `wait` и `ms`, а между ними единственный параметр опкода:
 
-A parameter consists of two parts: a `number` and a `type`.
-
-#### Parameters Order
-
-The number in parameter `%1d%` is its index. The idea is that some opcodes have their parameters rearranged to make source code more readable.
-
+```sb3
+0001: wait 10 ms
 ```
+
+Определение параметра включает в себя его [порядковый номер](opcodes-list-scm.ini.md#poryadok-sledovaniya-parametrov) и [тип](opcodes-list-scm.ini.md#tipy-parametrov).
+
+#### Порядок следования параметров
+
+Число в параметре `%1d%` - его порядковый номер. Он нужен, потому что в некоторых опкодах параметры переставлены местами для улучшения читабельности кода.
+
+```ini
 0053=5,%5d% = create_player %1o% at %2d% %3d% %4d%
 ```
 
-The disassembler writes the 5th opcode parameter before any others.
+Для опкода `0053` дизассемблер поставит 5-й параметр в начале:
 
 ```sb3
-0053: $PLAYER_CHAR = create_player #NULL at 2488.562 -1666.865 12.8757
+0053: $PLAYER_CHAR = сreate_player #NULL at 2488.562 -1666.865 12.8757 
 ```
 
-If the parameters will follow their original order, the opcode `0053` would look like:
+Если бы параметры выводились в оригинальном порядке, опкод `0053` выглядел бы так:
 
 ```sb3
-0053: create_player #NULL at 2488.562 -1666.865 12.8757 $PLAYER_CHAR
+0053: сreate_player #NULL at 2488.562 -1666.865 12.8757 $PLAYER_CHAR
 ```
 
 {% hint style="warning" %}
-Changing parameters order in the INI file should be avoided by any means as it makes the source code incompatible with the default opcode definitions or earlier scripts.
+Изменение порядка следования параметров должно быть крайней мерой, т.к. оно приводит к несовместимости старых скриптов с новым INI файлом.
 {% endhint %}
 
 {% hint style="info" %}
-Parameters order may vary from mode to mode. See the comparison table in [Edit modes](README.md#available-modes) to find out which mode uses which type.
+Порядок следования параметров может различаться от режима к режиму. Смотрите [сравнительную таблицу](README.md#available-modes), чтобы узнать больше.
 {% endhint %}
 
-#### Parameter Types
+#### Типы параметров
 
-A letter following the index number indicates the parameter type.
+Буква после номера параметра обозначает его тип.
 
-`d` - any value\
-`p` - a [label](../coding/data-types.md#labels) reference\
-`o` - any [model](../coding/data-types.md#model-names) id (including objects)\
-`m` - an `.ide` model id (no objects)\
-`g` - a key from the [`.gxt`](README.md#text) file\
-`x` - an external script ID\
-`k` - a fixed-size null-terminated string literal (128 bytes)
+`d` - любое значение  
+`p` - имя [метки](../coding/data-types.md#metki)  
+`o` - имя [модели](../coding/data-types.md#imena-modelei) \(включая объекты\)  
+`m` - имя модели из `.ide` файла \(исключая объекты\)  
+`g` - ключ из [`.gxt`](README.md#text) файла  
+`x` - ID внешнего скрипта  
+`k` - строковый литерал фиксированной длины \(128 байтов\)  
+
 
 {% hint style="info" %}
-You can freely change parameters types, if needed.
+Типы параметров могут свободно меняться в случае необходимости.
 {% endhint %}
 
 <script src="../../js/main.min.js"></script>
