--- a/ru/editor/console.html
+++ b/ru/editor/console.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Console</title>
+  <title>Консоль</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,138 +9,91 @@
 </head>
 <body>
 
-The **console** offers an ability to switch debug options of Sanny Builder. Mostly they relate to the disassembler features and you can see the changes when disassemble a file. The console window is open after pressing `Ctrl+~`. You may enter the commands in the input line. After typing a command press  `Enter` to proceed. The console will display a result.
+**Консоль** служит инструментом для переключения отладочных опций Sanny Builder. Многие из них относятся к возможностям дизассемблера и влияют на его работу. 
 
-:::l
-![](../img/console.png)
-:::
+Окно консоли открывается нажатием `Ctrl+~`. Для запуска команды введите ее в верхнем поле и нажмите `Enter`. Консоль покажет результат.
 
-## Available commands 
+## Доступные команды 
 
-All commands are case-insensitive.
+Все команды являются регистронезависимыми.
 
-`help` – shows the help information about the console\
-`clear` – clears the console\
-`list` – shows in the console the list of all commands\
-`list options` – lists all available debug options\
-`toggle [on/off]` – enable or disable [debug options](console.md#debug-options)
+`help` – показать справку о консоли  
+`clear` – очистить консоль  
+`list` – показать список доступных команд  
+`list options` – вывести все доступные отладочные опции  
+`toggle <имя опции> [on/off]` – переключить [отладочную опцию](console.md#otladochnye-opcii)
 
-The input command ends either with the word `ON` (the option will be enabled) or `OFF` (the option will be disabled), or nothing (the option will be toggled from `ON` to `OFF` or from `OFF` to `ON`).
+Команда `toggle` заканчивается либо словом `ON` \(опция будет включена\), `OFF` \(опция будет выключена\), или ни тем ни другим \(опция будет переключена с `ON` на `OFF` или с `OFF` на `ON`\).
 
 {% hint style="info" %}
-Before enabling the following options turn on the debug mode with the command `toggle debug_mode ON`
+Перед включением отладочных опций включите общий режим отладки командой`toggle debug_mode ON`
 {% endhint %}
 
-## Debug Options
+## Отладочные опции
 
-### CODE_OFFSETS
+### CODE\_OFFSETS
 
-The disassembler prints the offset of each command.
+Дизассемблер выводит для каждой команды ее адрес в файле \(смещение от начала\).
 
-### VAR_COUNTER
+### VAR\_COUNTER
 
-After compiling the console contains the list of the [global variables](../coding/variables.md#global-variables) used only once in the code (i.e. can be removed or replaced with [local variables](../coding/variables.md#local-variables)).
+После компиляции в консоли содержится список [глобальных переменных](../coding/variables.md#globalnye-peremennye), которые были использованы только один раз \(неиспользуемые переменные, которые можно удалить или заменить на [локальные переменные](../coding/variables.md#lokalnye-peremennye)\).
 
-### IGNORE_UNKNOWN
+### IGNORE\_UNKNOWN
 
-The disassembler ignores unknown opcodes, incorrect parameters and so on. It helps to open almost any file that used to be protected or compiled incorrectly.
+Дизассемблер игнорирует ошибки в исходном коде \(неизвестные опкоды, неверные типы данных, нарушения формата файла\). Это помогает открыть большинство скриптов, которые были скомпилированы некорректно.
 
-### CONSTANT_INDEXES
+### CONSTANT\_INDEXES
 
-The disassembler prints array elements as global variables with indexes. It's available for `GTA SA`, `LCS`, `VCS` games.
+Выводит элементы массива как глобальные переменные с индексом. Доступно для режимов `GTA SA`, `LCS`, `VCS`. 
 
-E.g. given an array of three elements starting at `$10` this option affects the way the variables look like after disassembling:
+Например, если в исходном файл был массив из трех элементов, начинающийся с `$10`, то при переключении этой опции переменные в дизассемблированном файле будут выглядеть следующим образом:
 
-<table>
-<thead>
-<tr>
-<th>Without <code>CONSTANT_INDEXES</code></th>
-<th>With <code>CONSTANT_INDEXES</code></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>$10</td>
-<td>$10[0]</td>
-</tr>
-<tr>
-<td>$11</td>
-<td>$10[1]</td>
-</tr>
-<tr>
-<td>$12</td>
-<td>$10[2]</td>
-</tr>
-</tbody>
-</table>
+| `Без CONSTANT_INDEXES` | С `CONSTANT_INDEXES` |
+| :--- | :--- |
+| $10 | $10\[0\] |
+| $11 | $10\[1\] |
+| $12 | $10\[2\] |
 
-### SKIP_SCM_HEADER
+### SKIP\_SCM\_HEADER
 
-Disassembler skips the header of the input file. It allows to open headless scripts (e.g. the ones from `script.img` or CLEO scripts). 
+Дизассемблер пропускает чтение заголовка `.scm` файла. Это позволяет открывать скрипты в которых заголовка нет \(например, скрипты из файла `script.img` или CLEO скрипты\).
 
-With this option the compiler makes `.scm` files without the header (similar to `{$EXTERNAL}` [directive](../coding/directives.md#usdexternal)).
+Также при включении этой опции Sanny Builder компилирует `.scm` файлы без заголовка \(альтернативно использованию [директивы](../coding/directives.md#usdexternal) `{$EXTERNAL}`\).
 
-### SKIP_EXTRA_INFO
+### SKIP\_EXTRA\_INFO
 
-The disassembler ignores the [extra info](options/general.md#add-extra-info-to-scm) section attached to the input file. It also treats this section as a set of regular SCM instructions, so enabling `IGNORE_UNKNOWN` option is recommended.
+Дизассемблер игнорирует секцию с [дополнительной информацией](options/general.md#dobavlyat-dopolnitelnuyu-informaciyu-v-scm) в конце скрипта. Эта секция будет рассматриваться как набор SCM инструкций, поэтому рекомендуется дополнительно включить опцию `IGNORE_UNKNOWN`.
 
-## Alternate ways
+## Альтернативные способы включения
 
-Sanny Builder offers a few other ways to toggling debug options outside of the console that might be useful in some cases.
+Sanny Builder предлагает несколько способов для переключения отладочных опций за пределами консоли. Эти способы могут быть полезны в определенных случаях.
 
-### Running with --debug
+### Запуск с параметром --`debug`
 
-The `--debug` [option](cli.md#debug) provides an alternate way of switching the debug options. Run Sanny with the parameter `--debug X`, where `X` is a series of `0` and `1`.  Each digit in the series corresponds to a particular debug option:
+Запуск программы через командную строку с [параметром](cli.md#debug) `--debug` является способом одновременно переключить несколько опций. Запустите `sanny.exe` с параметром `--debug X`, где `X` это последовательность `0` и `1`.  Каждая цифра в последовательности означает определенную опцию:
 
-<table>
-<thead>
-<tr>
-<th>Index</th>
-<th>Debug Option</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>CODE_OFFSETS</td>
-</tr>
-<tr>
-<td>2</td>
-<td>IGNORE_UNKNOWN</td>
-</tr>
-<tr>
-<td>3</td>
-<td>VAR_COUNTER</td>
-</tr>
-<tr>
-<td>4</td>
-<td>CONSTANT_INDEXES</td>
-</tr>
-<tr>
-<td>5</td>
-<td>SKIP_SCM_HEADER</td>
-</tr>
-<tr>
-<td>6</td>
-<td>SKIP_EXTRA_INFO</td>
-</tr>
-</tbody>
-</table>
+| Индекс | Отладочная опция |
+| :--- | :--- |
+| 1 | CODE\_OFFSETS |
+| 2 | IGNORE\_UNKNOWN |
+| 3 | VAR\_COUNTER |
+| 4 | CONSTANT\_INDEXES |
+| 5 | SKIP\_SCM\_HEADER |
+| 6 | SKIP\_EXTRA\_INFO |
 
-```
+```text
 sanny.exe --debug 110000
 ```
 
-The first `1` enables the `CODE_OFFSETS` option, the second `1` enables the `IGNORE_UNKNOWN` mode. The remaining options are disabled.
+Первая `1` включит опцию `CODE_OFFSETS`, вторая `1` включит режим `IGNORE_UNKNOWN`. Оставшиеся опции будут отключены.
 
-### Using GUI
+### Использование интерфейса программы
 
-Clicking the right-most button in the main toolbar shows a drop-down menu with the list of debug options.
+Клик по самой правой кнопке на панели инструментов открывает выпадающее меню со списком опций:
 
-:::center
-![](../img/sb-debug-options-dropdown.png)
-:::
+![](../.gitbook/assets/debug_options.PNG)
 
-Each menu item toggles a particular debug option. The change comes into effect immediately.
+Каждый элемент списка переключает одну из опций. Изменение будет сразу доступно для использования.
 
 <script src="../../js/main.min.js"></script>
