--- a/ru/scm-documentation/ascii-character-codes.html
+++ b/ru/scm-documentation/ascii-character-codes.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
 <head>
-	<title>ASCII Character Codes</title>
+	<title>Коды символов ASCII</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
