--- a/ru/scm-documentation/lcs/gangs.html
+++ b/ru/scm-documentation/lcs/gangs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Gang IDs</title>
+  <title>Банды</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Name</th>
+<th>Название</th>
 </tr>
 </thead>
 <tbody>
