--- a/ru/scm-documentation/lcs/special-actors.html
+++ b/ru/scm-documentation/lcs/special-actors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Special Actors</title>
+  <title>Персонажи</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,14 +10,14 @@
 <body>
 
 ```sb3
-0241: load_special_actor 1 &lt;ID&gt;
+0241: load_special_actor 1 &lt;id&gt;
 ```
 
 <table>
 <thead>
 <tr>
 <th>ID</th>
-<th>Description</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
