--- a/ru/scm-documentation/sa/garages.html
+++ b/ru/scm-documentation/sa/garages.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Garage IDs</title>
+  <title>Гаражи</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,10 +16,10 @@ Garage.Activate('BODLAWN')
 <table>
 <thead>
 <tr>
-<th>Name</th>
-<th>Position</th>
-<th>Description</th>
-<th>Notes</th>
+<th>Имя</th>
+<th>Позиция</th>
+<th>Описание</th>
+<th>Примечания</th>
 </tr>
 </thead>
 <tbody>
