--- a/ru/scm-documentation/sa/haircuts.html
+++ b/ru/scm-documentation/sa/haircuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Haircuts</title>
+  <title>Прически</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,16 +10,16 @@
 <body>
 
 ```sb3
-Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt;)
+Player.SetClothes($PLAYER_CHAR, &lt;текстура&gt;, &lt;модель&gt;, &lt;часть тела&gt;)
 ```
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th>[Body part](player-body-parts.html)</th>
-<th>Description</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th>[Часть тела](player-body-parts.html)</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
