--- a/ru/scm-documentation/sa/interiors.html
+++ b/ru/scm-documentation/sa/interiors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Interiors</title>
+  <title>Интерьеры</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,9 +11,9 @@
 <table>
 <thead>
 <tr>
-<th>Number</th>
-<th>Name</th>
-<th>Description</th>
+<th>Номер</th>
+<th>Название</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
