--- a/ru/scm-documentation/sa/stats.html
+++ b/ru/scm-documentation/sa/stats.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Statistics ID</title>
+  <title>Статистика</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-`0` to `81` - floating-point values; `82+` - integer values.
+С `0` до `81` - дробные значения; `82+` - целые значения.
 
 <table>
 <thead>
 <tr>
 <th>ID</th>
-<th>Description</th>
+<th>Описание</th>
 </tr>
 </thead>
 <tbody>
