--- a/ru/scm-documentation/sa/tattoos.html
+++ b/ru/scm-documentation/sa/tattoos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Tattoos</title>
+  <title>Татуировки</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,19 +10,19 @@
 <body>
 
 ```sb3
-Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt;)
+Player.SetClothes($PLAYER_CHAR, &lt;текстура&gt;, &lt;модель&gt;, &lt;часть тела&gt;)
 ```
 
-## Lower left arm
+## Левое предплечье
 
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -53,11 +53,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -95,11 +95,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -137,11 +137,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -179,11 +179,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -242,11 +242,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -298,11 +298,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -361,11 +361,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
@@ -424,11 +424,11 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <table>
 <thead>
 <tr>
-<th>Texture</th>
-<th>Model</th>
-<th><a href="player-body-parts.md">Body Part</a></th>
-<th>Tattoo Name</th>
-<th>Image</th>
+<th>Текстура</th>
+<th>Модель</th>
+<th><a href="player-body-parts.md">Часть тела</a></th>
+<th>Название</th>
+<th>Изображение</th>
 </tr>
 </thead>
 <tbody>
