--- a/ru/scm-documentation/sa/vehicle-variations.html
+++ b/ru/scm-documentation/sa/vehicle-variations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Vehicle Variations</title>
+  <title>Варианты изменения авто</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,16 +13,16 @@
 0506: set_vehicle_model #PONY next_variation &lt;variantA&gt; &lt;variantB&gt;
 ```
 
-For most vehicles, only one extra can be added so both the second and third parameters should be set to the same wanted variant to avoid confusion. However, some vehicles can have 2 different extras active.
+Большинство машин может иметь только одно изменение, поэтому второй и третий параметры должны быть одинаковыми. Однако некоторые машины могут иметь два изменения.
 
-Variant `-1` is the default model with no extras. Variants `0` through `5` are possible extra variants which will fall back to the default if the model does not have that many extras, and variants greater than `5` will crash the game.
+Вариант `-1` - это стандартная модель, без изменений. Варианты от `0` до `5` - возможные изменения. Если модель не поддерживает данный номер, то будет установлена модель по умолчанию. Варианты больше `5` приведут к ошибке игры.
 
 <table>
 <thead>
 <tr>
-<th>Model name</th>
-<th>Model ID</th>
-<th>Variant</th>
+<th>&#x418;&#x43C;&#x44F; &#x43C;&#x43E;&#x434;&#x435;&#x43B;&#x438;</th>
+<th>ID &#x43C;&#x43E;&#x434;&#x435;&#x43B;&#x438;</th>
+<th>&#x412;&#x430;&#x440;&#x438;&#x430;&#x43D;&#x442;</th>
 </tr>
 </thead>
 <tbody>
