--- a/ru/scm-documentation/sa/weapons.html
+++ b/ru/scm-documentation/sa/weapons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Weapon IDs</title>
+	<title>Оружие</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,10 +14,10 @@
 <table>
 <thead>
 <tr>
-<th>Name</th>
+<th>Идентификационные</th>
 <th>ID</th>
-<th>Model</th>
-<th>Group</th>  
+<th>Имя модели</th>
+<th>Группа</th>  
 <th>GUI</th>
 <th>GXT</th>
 </tr>
