--- a/ru/scm-documentation/vc/pedtypes.html
+++ b/ru/scm-documentation/vc/pedtypes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Ped Types</title>
+  <title>Типы пешеходов</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
 <thead>
 <tr>
 <th>ID</th>
-<th>Type</th>
+<th>Тип</th>
 </tr>
 </thead>
 <tbody>
