--- a/ru/scm-documentation/virtual-key-codes.html
+++ b/ru/scm-documentation/virtual-key-codes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Virtual Key Codes</title>
+	<title>Список значений кнопок для 0AB0</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
