--- a/ru/version-history.html
+++ b/ru/version-history.html
@@ -115,7 +115,7 @@
 Новые описания опкодов для GTA LCS и GTA VCS несовместимы с предыдущими версиями. Вы должны заново дизассемблировать `main.scm` этих игр прежде чем делать какие-то изменения.
 {% endhint %}
 
-👏 Спасибо [marcelo\_20xx](https://gtaforums.com/profile/95582-marcelo_20xx/) и [fastman92](https://gtaforums.com/profile/423631-fastman92/) за их вклад в этот релиз.
+👏 Спасибо [marcelo_20xx](https://gtaforums.com/profile/95582-marcelo_20xx/) и [fastman92](https://gtaforums.com/profile/423631-fastman92/) за их вклад в этот релиз.
 
 ## v. 3.4.1 - 06.08.2020
 
@@ -137,7 +137,7 @@
   * новый пункт меню для быстрого создания CLEO скрипта (см. примечание внизу статьи [Шаблоны кода](edit-modes/code-templates.md))
   * ссылки на новый портал с документацией в меню и сообщениях об ошибках
 * небольшие изменения:
-  * обновлены определения некоторых опкодов (player money += в SA, award\_achievement в SA Mobile, `0479` в VCS)
+  * обновлены определения некоторых опкодов (player money += в SA, award_achievement в SA Mobile, `0479` в VCS)
   * в файле `CustomVariables.ini` для GTA III переменные `script_controlled_player` и `flag_player_on_mission` переименованы в `PLAYER_ACTOR` и `ONMISSION` соответственно ([#3](https://github.com/sannybuilder/data/issues/3))
   * возвращена старая версия файлов в папке `help\GXT Strings` ([#25](https://github.com/sannybuilder/dev/issues/25))
   * файл `macroes.txt` переименован `templates.txt`
@@ -235,7 +235,7 @@
 * добавлена новая директива [$NOSOURCE](coding/directives.md#usdnosource), чтобы запретить добавление исходного кода в тело скрипта
 * некоторые горячие клавиши могут быть изменены [в опциях](editor/options/hotkeys.md)
 * добавлена возможность автоматически проверять наличие обновления при запуске программы
-* директивы [$VERSION](coding/directives.md#usdversion) и [$VERSION\_RESTORE](coding/directives.md#usdversion_restore) устарели (компилируются, но не имеют эффекта)
+* директивы [$VERSION](coding/directives.md#usdversion) и [$VERSION_RESTORE](coding/directives.md#usdversion_restore) устарели (компилируются, но не имеют эффекта)
 * обновлены перевод на испанский и китайский языки
 * [Менеджер координат](editor/features.md#izmenenie-koordinat-i-ugla-razvorota-igroka) может изменять угол поворота игрока в GTA VC
 * в комплектацию Sanny Builder добавлен [CLEO плагин SCRLog](http://www.gtagarage.com/mods/show.php?id=23846) от LINK/2012 (можно найти в папке tools)
@@ -363,7 +363,7 @@
 * при декомпиляции переменные заменяются на тип [ADMA](coding/data-types.md#peremennye), если не делятся на `4`
 * при компиляции при отсутствии заголовка выставляются значения по умолчанию
 * возможность открывать файлы в редакторе методом Drag&Drop
-* новые препроцессорные директивы: [{$VERSION}](coding/directives.md#usdversion), [{$VERSION\_RESTORE}](coding/directives.md#usdversion_restore)
+* новые препроцессорные директивы: [{$VERSION}](coding/directives.md#usdversion), [{$VERSION_RESTORE}](coding/directives.md#usdversion_restore)
 
 {% hint style="info" %}
 Если при компиляции вы получаете сообщение об ошибке в заголовке (`Неизвестная команда DEFINE OBJECTS`) переместите строку `{$VERSION xxxx}` в любое место после заголовка, например перед комментарием `//-------------MAIN---------------`
@@ -388,7 +388,7 @@
 * возможность передавать во [внешнее приложение](editor/features.md#menyu-vneshnikh-prilozhenii) в качестве параметра имя текущего открытого файла
 * исправлены некоторые ошибки в конфигурационных файлах
 * убрана автоматическая конвертация числа в тип `Float`, если переменная была объявлена как `Float`, а в нее записывалось целое число. Теперь опкод выбирается только в зависимости от типа числа
-* чтение/изменение Z\_angle игрока в [Coord Manager](editor/features.md#izmenenie-koordinat-i-ugla-razvorota-igroka); возможность вставки значения угла в скрипт нажатием `Ctrl+Shift+E` (для SA)
+* чтение/изменение Z_angle игрока в [Coord Manager](editor/features.md#izmenenie-koordinat-i-ugla-razvorota-igroka); возможность вставки значения угла в скрипт нажатием `Ctrl+Shift+E` (для SA)
 
 ## v. 2.98 - 04.08.2006
 
